# dwh-auditor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  config_template.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: Makefile  architecture.rst  conf.py  configuration.rst  contributing.rst  index.rst  quickstart.rst  requirements.txt
docs/_templates/sidebar/: language.html
docs/api/: analyzer.rst  config.rst  extractor.rst  index.rst  models.rst  reporter.rst
docs/locale/en/LC_MESSAGES/: architecture.mo  architecture.po  configuration.mo  configuration.po  contributing.mo  contributing.po  index.mo  index.po  quickstart.mo  quickstart.po
docs/locale/en/LC_MESSAGES/api/: analyzer.mo  analyzer.po  config.mo  config.po  extractor.mo  extractor.po  index.mo  index.po  models.mo  models.po  reporter.mo  reporter.po
docs/locale/pot/: architecture.pot  configuration.pot  contributing.pot  index.pot  quickstart.pot
docs/locale/pot/.doctrees/: architecture.doctree  configuration.doctree  contributing.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/locale/pot/.doctrees/api/: analyzer.doctree  config.doctree  extractor.doctree  index.doctree  models.doctree  reporter.doctree
docs/locale/pot/api/: analyzer.pot  config.pot  extractor.pot  index.pot  models.pot  reporter.pot
src/bq_auditor/: __init__.py  config.py  main.py
src/bq_auditor/analyzer/: __init__.py  cost.py  runner.py  scan.py  zombie.py
src/bq_auditor/extractor/: __init__.py  bigquery.py
src/bq_auditor/models/: __init__.py  result.py
src/bq_auditor/reporter/: __init__.py  console.py  markdown.py
src/dwh_auditor/: __init__.py  config.py  config_template.yaml  main.py
src/dwh_auditor/analyzer/: __init__.py  cost.py  recurring.py  runner.py  scan.py  zombie.py
src/dwh_auditor/extractor/: __init__.py  bigquery.py
src/dwh_auditor/models/: __init__.py  job.py  result.py  table.py
src/dwh_auditor/reporter/: __init__.py  console.py  json_out.py  markdown.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py
tests/analyzer/: __init__.py  test_cost.py  test_recurring.py  test_scan.py  test_zombie.py
tests/extractor/: __init__.py  test_bigquery.py
tests/reporter/: test_json_out.py
